P4PU-992 added client, business logic and updated swagger
