# openapi/pagopa-arc-be.openapi.yaml
@@ -80,7 +80,7 @@ paths:
       summary: "Provide the logout endpoint"
       operationId: getLogoutEndpoint
       security:
-        - bearerAuth: [ ]
+        - BearerAuth: [ ]
       responses:
         '200':
           description: "User successfully logged out"
@@ -101,7 +101,7 @@ paths:
       summary: "Provide information regarding authenticated user"
       operationId: getUserInfo
       security:
-        - bearerAuth: []
+        - BearerAuth: []
       responses:
         '200':
           description: "Token Response"
@@ -149,7 +149,7 @@ paths:
       summary: "Retrieve the paged notices list from arc"
       operationId: getNoticesList
       security:
-        - bearerAuth: [ ]
+        - BearerAuth: [ ]
       parameters:
         - name: x-continuation-token
           in: header
@@ -164,7 +164,7 @@ paths:
           schema:
             type: integer
             format: int32
-            default: 10
+            default: '10'
         - name: paidByMe
           in: query
           description: "The field to filter notices by if is payer"
@@ -231,7 +231,7 @@ paths:
       summary: "Retrieve notice details from arc"
       operationId: getNoticeDetails
       security:
-        - bearerAuth: [ ]
+        - BearerAuth: [ ]
       parameters:
         - name: eventId
           in: path
@@ -278,7 +278,7 @@ paths:
       summary: "Retrieve notice receipt from arc"
       operationId: getNoticeReceipt
       security:
-        - bearerAuth: [ ]
+        - BearerAuth: [ ]
       parameters:
         - name: eventId
           in: path
@@ -327,7 +327,7 @@ paths:
       summary: "Generate payment notice from arc"
       operationId: postGeneratePaymentNotice
       security:
-        - bearerAuth: [ ]
+        - BearerAuth: [ ]
       requestBody:
         required: true
         content:
@@ -366,7 +366,7 @@ paths:
       summary: "Retrieve payment notices from arc"
       operationId: getPaymentNotices
       security:
-        - bearerAuth: [ ]
+        - BearerAuth: [ ]
       parameters:
         - name: dueDate
           in: query
@@ -425,7 +425,7 @@ paths:
       summary: "Retrieve payment notices details from arc"
       operationId: getPaymentNoticesDetails
       security:
-        - bearerAuth: [ ]
+        - BearerAuth: [ ]
       parameters:
         - name: iupd
           in: path
@@ -480,7 +480,7 @@ paths:
       summary: "Retrieve organizations list"
       operationId: getOrganizations
       security:
-        - bearerAuth: [ ]
+        - BearerAuth: [ ]
       responses:
         '200':
           description: "Obtained organizations list"
@@ -503,7 +503,7 @@ paths:
       summary: "Retrieve jwt token for the zendesk assistance"
       operationId: getZendeskAssistanceToken
       security:
-        - bearerAuth: [ ]
+        - BearerAuth: [ ]
       parameters:
         - name: userEmail
           in: query
@@ -534,9 +534,39 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorDTO'
+  /brokers/{brokerId}/organizations/spontaneous:
+    get:
+      tags:
+        - Organization
+      summary: "Retrieves the list of organizations with at least one dpto with flagSpontaneous and flagActive set to true"
+      operationId: getOrganizationsWithSpontaneous
+      security:
+        - BearerAuth: [ ]
+      parameters:
+        - name: brokerId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: "OrganizationsWithSpontaneousDTO"
+        '401':
+          description: Unauthorized - Missing or invalid token
+        '403':
+          description: Forbidden - Access denied
+        '500':
+          description: Internal Server Error
 components:
   securitySchemes:
-    bearerAuth:
+    BearerAuth:
       type: http
       scheme: bearer
       bearerFormat: JWT
